# Proyectos_Graficas

./: .gitignore  README.md
dioramaMc/: Cargo.toml
dioramaMc/src/: aabb.rs  camera.rs  color.rs  cube.rs  framebuffer.rs  intersect.rs  light.rs  main.rs  material.rs  render.rs  texture.rs
dioramaMc/src/shapes3d/: cube.rs  mod.rs  stair.rs  wall.rs
proyectg_maze/: Cargo.toml  maze.txt
proyectg_maze/src/: caster.rs  controller.rs  framebuffer.rs  hud.rs  main.rs  maze.rs  minimap.rs  player.rs  render3d.rs  sprites.rs  textures.rs
spacialRide/: Cargo.toml
spacialRide/res/: nave.mtl
spacialRide/src/: aabb.rs  camera.rs  controller.rs  framebuffer.rs  light.rs  main.rs  material.rs  model_renderer.rs  obj_loader.rs  orbit.rs  rasterizer.rs  render.rs  ring.rs  sphere.rs  stars.rs  vertex_shader.rs
