[package]
name = "dioramaMc"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 3
debug = false

[dependencies]
minifb = "0.26.0"
nalgebra-glm = "0.18.0"
rand = "0.8.5"
image = "0.24"
rayon = "1.10"
parking_lot = "0.12"
crossbeam-channel = "0.5"
